--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <input type="radio" name="slider" id="s3">
         <input type="radio" name="slider" id="s4">
         <input type="radio" name="slider" id="s5">
+        <!-- <input type="hidden" name="numQ" id='numQ'> -->
       
         
         <label for="s1" id="slide1" class='slide-card-inner page-title'>
@@ -100,8 +101,8 @@
             <a href="#" class="btn btn-save page-text" id="result6" onclick="end()">Save answers</a><br class='line-break'> 
         </form>
         <div class="results">
-            <a href="#" class="score-card page-text" id="result1">Questions in the Set</a>
-            <a href="#" class="score-card page-text" id="result2">Correct Answers</a>
+            <a href="#" class="score-card page-text" id="result1"></a>
+            <a href="#" class="score-card page-text" id="result2"></a>
             <a href="#" class="score-card page-text" id="result3">Wrong Answers</a><br class='line-break'>            
             <a href="#" class="score-card page-text" id="result4">Questions left to answer</a>
             <a href="#" class="score-card page-text" id="result5">Percentage correct so far</a>
