--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/highscores.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -21,5 +21,5 @@
         </div>
     </div>
 </body>
-<script src="highscores.js"></script>
+<script src="./js/highscores.js"></script>
 </html>
